[package]
name = "web-scraper"
version = "0.1.0"
authors = ["Michael Bausano <michael@joinpouch.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.18"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
scraper = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.26" }
url = "*"
